force-app/main/default/objects/cgcloud__Data_Type_Option__c/cgcloud__Data_Type_Option__c.object-meta.xml
<CustomObject>
    <description>Holds the item (picklist item) of a flexible data type.</description>
    <label>Data Type Option</label>
    <nameField>
        <displayFormat>DTO-{0000}</displayFormat>
        <label>Data Type Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Type Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>