force-app/main/default/objects/cgcloud__Data_Type_Option__c/fields/cgcloud__Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Code__c</fullName>
    <label>Code</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>