force-app/main/default/objects/cgcloud__Data_Type_Option__c/fields/cgcloud__Code_Uniqueness_Check__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Code_Uniqueness_Check__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is used internal to ensure that one code (field) is unique within a data type record. The value would be set via workflow. It should not be shown to the user.</description>
    <label>Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>