force-app/main/default/objects/cgcloud__Data_Type_Option__c/fields/cgcloud__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Type__c</fullName>
    <label>Data Type</label>
    <referenceTo>cgcloud__Data_Type__c</referenceTo>
    <relationshipLabel>Data Type Options</relationshipLabel>
    <relationshipName>Data_Type_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>