force-app/main/default/objects/cgcloud__Data_Type_Option__c/fields/cgcloud__Default_Item__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only one default item is allowed per data type.</inlineHelpText>
    <label>Default Item</label>
    <type>Checkbox</type>
</CustomField>