force-app/main/default/objects/cgcloud__Data_Type_Option__c/fields/cgcloud__ImageId__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__ImageId__c</fullName>
    <description>Name of the picture on mobility device</description>
    <label>ImageId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>