force-app/main/default/objects/cgcloud__Data_Type_Option__c/fields/cgcloud__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Short_Description__c</fullName>
    <formula>CASE($User.cgcloud__Language_Postfix__c, 
&quot;Language1&quot;, cgcloud__Short_Description_Language_1__c, 
&quot;Language2&quot;, BLANKVALUE(cgcloud__Short_Description_Language_2__c,cgcloud__Short_Description_Language_1__c), 
&quot;Language3&quot;, BLANKVALUE(cgcloud__Short_Description_Language_3__c,cgcloud__Short_Description_Language_1__c), 
&quot;Language4&quot;, BLANKVALUE(cgcloud__Short_Description_Language_4__c,cgcloud__Short_Description_Language_1__c), 
cgcloud__Short_Description_Language_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Description</label>
    <type>Text</type>
</CustomField>