force-app/main/default/objects/cgcloud__Data_Type_Option__c/fields/cgcloud__Short_Description_Language_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Short_Description_Language_1__c</fullName>
    <label>Short Description Language 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>