force-app/main/default/objects/cgcloud__Data_Type_Option__c/fields/cgcloud__Short_Description_Language_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Short_Description_Language_3__c</fullName>
    <label>Short Description Language 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>