force-app/main/default/objects/cgcloud__Data_Type_Option__c/fields/cgcloud__Unique_Default_Option__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Default_Option__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is used internal to ensure that only one option can be set as default within a data type record. The value would be set via workflow. It should not be shown to the user.</description>
    <label>Unique Default Item</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>