force-app/main/default/objects/cgcloud__Data_Type_Option__c/fields/cgcloud__Validation_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Validation_Code__c</fullName>
    <label>Validation Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>